--- a/index.html
+++ b/index.html
@@ -24,14 +24,18 @@
         <h1>B.M.B TECH AI</h1>
         <button id="new-chat-btn">＋ New Chat</button>
       </header>
+
+      <!-- Messages -->
       <main id="chat-box"></main>
-      <footer>
+
+      <!-- Chat Input -->
+      <div class="chat-input">
         <input type="text" id="user-input" placeholder="Type your message..." />
         <button id="send-btn">Send</button>
-      </footer>
+      </div>
     </div>
 
   </div>
   <script src="script.js"></script>
 </body>
-  </html>
+</html>
