--- a/index.html
+++ b/index.html
@@ -24,18 +24,14 @@
         <h1>B.M.B TECH AI</h1>
         <button id="new-chat-btn">＋ New Chat</button>
       </header>
-
-      <!-- Messages -->
       <main id="chat-box"></main>
-
-      <!-- Chat Input -->
-      <div class="chat-input">
+      <footer>
         <input type="text" id="user-input" placeholder="Type your message..." />
         <button id="send-btn">Send</button>
-      </div>
+      </footer>
     </div>
 
   </div>
   <script src="script.js"></script>
 </body>
-</html>
+  </html>
