--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h1>B.M.B TECH AI</h1>
       </header>
       <div class="input-area">
-        <input type="text" id="user-input" placeholder="Type your message..." />
+        <input type="text" id="user-input" placeholder="Type your message..." autocomplete="off" />
         <button id="send-btn">Send</button>
       </div>
       <main id="chat-box"></main>
