--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
   <!-- CHAT BOX -->
   <footer class="chat-box">
-    <input type="text" id="userInput" placeholder="Ask bwm xmd ai anything" autocomplete="off" />
-    <button id="sendBtn">📨</button>
+    <input type="text" id="user-input" placeholder="Ask bwm xmd ai anything" autocomplete="off" />
+    <button id="send-btn">📨</button>
   </footer>
 
   <script src="script.js"></script>
